# sketchy_app

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  lv_conf.h  sketchyapp.c  sketchyapp.h
android/: Android.mk.in  AndroidManifest.xml.in  strings.xml.in
android/src/: Entry.java.in
cmake/: Platform.cmake
